updated graphcool schema

--- a/graphql-react/.eslintrc
+++ b/graphql-react/.eslintrc
@@ -5,6 +5,7 @@
     },
     "extends": "fortech-react",
     "rules": {
-        "react/require-default-props": 0
+        "react/require-default-props": 0,
+        "react/prop-types": 0
     }
 }
